# file-explorer-emulator

./: Cargo.toml  LICENSE  README.md
src/: change_root_path_operation.rs  conflict_process.rs  context_menu.rs  copy_and_paste_operation.rs  create_operation.rs  cut_operation.rs  delete_operation.rs  general_helper.rs  keydown_helper.rs  main.rs  rename_operation.rs  search_operation.rs  shortcut_helper.rs  window_helper.rs
src/assets/: change_root_path_popup.css  conflict_popup.css  context_menu_popup.css  create_rename_popup.css  delete_popup.css  rename_popup.css  search_popup.css  styles.css
