[package]
name = "file-explorer-emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
copy_dir = "0.1.3"
dioxus = "0.4.0"
dioxus-desktop = "0.4.0"
dioxus-free-icons = "0.7.0"
dioxus-material-icons = "1.1.0"
dioxus-tui = "0.4.0"
image = "0.24.6"
lazy_static = "1.4.0"
opener = "0.6.1"
fs_extra = "1.3.0"
regex = "1.3"
walkdir = "2"
winapi = { version = "0.3.9", features = ["winuser", "winbase"] }
