[package]
name = "file-explorer-emulator"
version = "0.1.1"
edition = "2021"

[dependencies]
chrono = "0.4.38"
copy_dir = "0.1.3"
dioxus = { version = "0.5.6", features=["desktop"] }
dioxus-free-icons = "0.8.6"
dioxus-material-icons = "2.0.0"
image = "0.25.4"
lazy_static = "1.5.0"
opener = "0.7.2"
fs_extra = "1.3.0"
regex = "1.11.0"
walkdir = "2.5.0"
winapi = { version = "0.3.9", features = ["winuser", "winbase"] }
rayon = "1.10.0"
